Add DOIs/URLs to most references (as requested by the formatting instructions that all published papers seem to ignore)

--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -1,362 +1,305 @@
 @inproceedings{DBLP:conf/ijcai/BroeckTMDR11,
-  author       = {Guy {Van den Broeck} and
-                  Nima Taghipour and
-                  Wannes Meert and
-                  Jesse Davis and
-                  Luc {De Raedt}},
-  title        = {Lifted Probabilistic Inference by First-Order Knowledge Compilation},
-  booktitle    = {{IJCAI}},
-  pages        = {2178--2185},
-  publisher    = {{IJCAI/AAAI}},
-  year         = {2011},
-  doi          = {10.5591/978-1-57735-516-8/IJCAI11-363}
+  author          = {Guy {Van den Broeck} and Nima Taghipour and Wannes Meert
+                  and Jesse Davis and Luc {De Raedt}},
+  title           = {Lifted Probabilistic Inference by First-Order Knowledge
+                  Compilation},
+  booktitle       = {{IJCAI}},
+  pages           = {2178--2185},
+  publisher       = {{IJCAI/AAAI}},
+  year            = {2011},
+  doi             = {10.5591/978-1-57735-516-8/IJCAI11-363}
 }
 @inproceedings{DBLP:conf/nips/Broeck11,
-  author       = {Guy {Van den Broeck}},
-  title        = {On the Completeness of First-Order Knowledge Compilation for Lifted
-                  Probabilistic Inference},
-  booktitle    = {{NIPS}},
-  pages        = {1386--1394},
-  year         = {2011},
-  url          = {https://proceedings.neurips.cc/paper/2011/hash/846c260d715e5b854ffad5f70a516c88-Abstract.html}
-
+  author          = {Guy {Van den Broeck}},
+  title           = {On the Completeness of First-Order Knowledge Compilation
+                  for Lifted Probabilistic Inference},
+  booktitle       = {{NIPS}},
+  pages           = {1386--1394},
+  year            = {2011},
+  url             =
+                  {https://proceedings.neurips.cc/paper/2011/hash/846c260d715e5b854ffad5f70a516c88-Abstract.html}
 }
 @inproceedings{DBLP:conf/kr/DilkasB23,
-  author       = {Paulius Dilkas and
-                  Vaishak Belle},
-  title        = {Synthesising Recursive Functions for First-Order Model Counting: Challenges,
-                  Progress, and Conjectures},
-  booktitle    = {{KR}},
-  pages        = {198--207},
-  year         = {2023},
-  doi          = {10.24963/KR.2023/20}
+  author          = {Paulius Dilkas and Vaishak Belle},
+  title           = {Synthesising Recursive Functions for First-Order Model
+                  Counting: Challenges, Progress, and Conjectures},
+  booktitle       = {{KR}},
+  pages           = {198--207},
+  year            = {2023},
+  doi             = {10.24963/KR.2023/20}
 }
 @inproceedings{DBLP:conf/uai/BremenK21,
-  author       = {Timothy {van Bremen} and
-                  Ondrej Ku\v{z}elka},
-  title        = {Faster lifting for two-variable logic using cell graphs},
-  booktitle    = {{UAI}},
-  series       = {Proceedings of Machine Learning Research},
-  volume       = {161},
-  pages        = {1393--1402},
-  publisher    = {{AUAI} Press},
-  year         = {2021},
-  url          = {https://proceedings.mlr.press/v161/bremen21a.html}
+  author          = {Timothy {van Bremen} and Ond\v{r}ej Ku\v{z}elka},
+  title           = {Faster lifting for two-variable logic using cell graphs},
+  booktitle       = {{UAI}},
+  series          = {Proceedings of Machine Learning Research},
+  volume          = {161},
+  pages           = {1393--1402},
+  publisher       = {{AUAI} Press},
+  year            = {2021},
+  url             = {https://proceedings.mlr.press/v161/bremen21a.html}
 }
 @article{DBLP:journals/jair/Kuzelka21,
-  author       = {Ondrej Ku\v{z}elka},
-  title        = {Weighted First-Order Model Counting in the Two-Variable Fragment With
-                  Counting Quantifiers},
-  journal      = {J. Artif. Intell. Res.},
-  volume       = {70},
-  pages        = {1281--1307},
-  year         = {2021},
-  doi          = {10.1613/JAIR.1.12320}
-}
-@inproceedings{DBLP:conf/ijcai/BremenK20,
-  author       = {Timothy {van Bremen} and
-                  Ondrej Ku\v{z}elka},
-  title        = {Approximate Weighted First-Order Model Counting: Exploiting Fast Approximate
-                  Model Counters and Symmetry},
-  booktitle    = {{IJCAI}},
-  pages        = {4252--4258},
-  publisher    = {ijcai.org},
-  year         = {2020},
-  doi          = {10.24963/IJCAI.2020/587}
+  author          = {Ond\v{r}ej Ku\v{z}elka},
+  title           = {Weighted First-Order Model Counting in the Two-Variable
+                  Fragment With Counting Quantifiers},
+  journal         = {J. Artif. Intell. Res.},
+  volume          = {70},
+  pages           = {1281--1307},
+  year            = {2021},
+  doi             = {10.1613/JAIR.1.12320}
 }
 @article{DBLP:journals/ai/BremenK23,
-  author       = {Timothy {van Bremen} and
-                  Ondrej Ku\v{z}elka},
-  title        = {Lifted inference with tree axioms},
-  journal      = {Artif. Intell.},
-  volume       = {324},
-  pages        = {103997},
-  year         = {2023},
-  doi          = {10.1016/J.ARTINT.2023.103997}
+  author          = {Timothy {van Bremen} and Ond\v{r}ej Ku\v{z}elka},
+  title           = {Lifted inference with tree axioms},
+  journal         = {Artif. Intell.},
+  volume          = {324},
+  pages           = {103997},
+  year            = {2023},
+  doi             = {10.1016/J.ARTINT.2023.103997}
 }
 @inproceedings{DBLP:conf/aaai/TothK23,
-  author       = {Jan T{\'{o}}th and
-                  Ondrej Ku\v{z}elka},
-  title        = {Lifted Inference with Linear Order Axiom},
-  booktitle    = {{AAAI}},
-  pages        = {12295--12304},
-  publisher    = {{AAAI} Press},
-  year         = {2023},
-  doi          = {10.1609/AAAI.V37I10.26449}
+  author          = {Jan T{\'{o}}th and Ond\v{r}ej Ku\v{z}elka},
+  title           = {Lifted Inference with Linear Order Axiom},
+  booktitle       = {{AAAI}},
+  pages           = {12295--12304},
+  publisher       = {{AAAI} Press},
+  year            = {2023},
+  doi             = {10.1609/AAAI.V37I10.26449}
 }
 @inproceedings{DBLP:conf/ijcai/SvatosJT0K23,
-  author       = {Martin Svatos and
-                  Peter Jung and
-                  Jan T{\'{o}}th and
-                  Yuyi Wang and
-                  Ondrej Ku\v{z}elka},
-  title        = {On Discovering Interesting Combinatorial Integer Sequences},
-  booktitle    = {{IJCAI}},
-  pages        = {3338--3346},
-  publisher    = {ijcai.org},
-  year         = {2023},
-  doi          = {10.24963/IJCAI.2023/372}
+  author          = {Martin Svatos and Peter Jung and Jan T{\'{o}}th and Yuyi
+                  Wang and Ond\v{r}ej Ku\v{z}elka},
+  title           = {On Discovering Interesting Combinatorial Integer Sequences},
+  booktitle       = {{IJCAI}},
+  pages           = {3338--3346},
+  publisher       = {ijcai.org},
+  year            = {2023},
+  doi             = {10.24963/IJCAI.2023/372}
 }
 @inproceedings{DBLP:conf/aaai/MalhotraS22,
-  author       = {Sagar Malhotra and
-                  Luciano Serafini},
-  title        = {Weighted Model Counting in {FO2} with Cardinality Constraints and
-                  Counting Quantifiers: {A} Closed Form Formula},
-  booktitle    = {{AAAI}},
-  pages        = {5817--5824},
-  publisher    = {{AAAI} Press},
-  year         = {2022},
-  doi          = {10.1609/AAAI.V36I5.20525}
+  author          = {Sagar Malhotra and Luciano Serafini},
+  title           = {Weighted Model Counting in {FO2} with Cardinality
+                  Constraints and Counting Quantifiers: {A} Closed Form Formula},
+  booktitle       = {{AAAI}},
+  pages           = {5817--5824},
+  publisher       = {{AAAI} Press},
+  year            = {2022},
+  doi             = {10.1609/AAAI.V36I5.20525}
 }
 @article{DBLP:journals/cacm/GogateD16,
-  author       = {Vibhav Gogate and
-                  Pedro M. Domingos},
-  title        = {Probabilistic theorem proving},
-  journal      = {Commun. {ACM}},
-  volume       = {59},
-  number       = {7},
-  pages        = {107--115},
-  year         = {2016},
-  doi          = {10.1145/2936726}
+  author          = {Vibhav Gogate and Pedro M. Domingos},
+  title           = {Probabilistic theorem proving},
+  journal         = {Commun. {ACM}},
+  volume          = {59},
+  number          = {7},
+  pages           = {107--115},
+  year            = {2016},
+  doi             = {10.1145/2936726}
 }
 @article{DBLP:journals/pvldb/NiuRDS11,
-  author       = {Feng Niu and
-                  Christopher R{\'{e}} and
-                  AnHai Doan and
-                  Jude W. Shavlik},
-  title        = {Tuffy: Scaling up Statistical Inference in {Markov} Logic Networks using
-                  an {RDBMS}},
-  journal      = {Proc. {VLDB} Endow.},
-  volume       = {4},
-  number       = {6},
-  pages        = {373--384},
-  year         = {2011},
-  doi          = {10.14778/1978665.1978669}
-}
-@inproceedings{DBLP:conf/kr/KazemiP16,
-  author       = {Seyed Mehran Kazemi and
-                  David Poole},
-  title        = {Knowledge Compilation for Lifted Probabilistic Inference: Compiling
-                  to a Low-Level Language},
-  booktitle    = {{KR}},
-  pages        = {561--564},
-  publisher    = {{AAAI} Press},
-  year         = {2016},
-  url          = {http://www.aaai.org/ocs/index.php/KR/KR16/paper/view/12861}
+  author          = {Feng Niu and Christopher R{\'{e}} and AnHai Doan and Jude
+                  W. Shavlik},
+  title           = {Tuffy: Scaling up Statistical Inference in {Markov} Logic
+                  Networks using an {RDBMS}},
+  journal         = {Proc. {VLDB} Endow.},
+  volume          = {4},
+  number          = {6},
+  pages           = {373--384},
+  year            = {2011},
+  doi             = {10.14778/1978665.1978669}
 }
 @article{DBLP:journals/jair/TotisDRK23,
-  author       = {Pietro Totis and
-                  Jesse Davis and
-                  Luc {De Raedt} and
+  author          = {Pietro Totis and Jesse Davis and Luc {De Raedt} and
                   Angelika Kimmig},
-  title        = {Lifted Reasoning for Combinatorial Counting},
-  journal      = {J. Artif. Intell. Res.},
-  volume       = {76},
-  pages        = {1--58},
-  year         = {2023},
-  doi          = {10.1613/JAIR.1.14062}
+  title           = {Lifted Reasoning for Combinatorial Counting},
+  journal         = {J. Artif. Intell. Res.},
+  volume          = {76},
+  pages           = {1--58},
+  year            = {2023},
+  doi             = {10.1613/JAIR.1.14062}
 }
 @inproceedings{DBLP:conf/ecai/Kersting12,
-  author       = {Kristian Kersting},
-  title        = {Lifted Probabilistic Inference},
-  booktitle    = {{ECAI}},
-  series       = {Frontiers in Artificial Intelligence and Applications},
-  volume       = {242},
-  pages        = {33--38},
-  publisher    = {{IOS} Press},
-  year         = {2012},
-  doi          = {10.3233/978-1-61499-098-7-33}
+  author          = {Kristian Kersting},
+  title           = {Lifted Probabilistic Inference},
+  booktitle       = {{ECAI}},
+  series          = {Frontiers in Artificial Intelligence and Applications},
+  volume          = {242},
+  pages           = {33--38},
+  publisher       = {{IOS} Press},
+  year            = {2012},
+  doi             = {10.3233/978-1-61499-098-7-33}
 }
 @inproceedings{DBLP:conf/starai/JaegerB12,
-  author       = {Manfred Jaeger and
-                  Guy {Van den Broeck}},
-  title        = {Liftability of Probabilistic Inference: Upper and Lower Bounds},
-  booktitle    = {StarAI@UAI},
-  year         = {2012},
-  url          = {https://starai.cs.kuleuven.be/2012/accepted/jaeger.pdf}
+  author          = {Manfred Jaeger and Guy {Van den Broeck}},
+  title           = {Liftability of Probabilistic Inference: Upper and Lower
+                  Bounds},
+  booktitle       = {StarAI@UAI},
+  year            = {2012},
+  url             = {https://starai.cs.kuleuven.be/2012/accepted/jaeger.pdf}
 }
 @article{DBLP:journals/debu/GribkoffSB14,
-  author       = {Eric Gribkoff and
-                  Dan Suciu and
-                  Guy {Van den Broeck}},
-  title        = {Lifted Probabilistic Inference: {A} Guide for the Database Researcher},
-  journal      = {{IEEE} Data Eng. Bull.},
-  volume       = {37},
-  number       = {3},
-  pages        = {6--17},
-  year         = {2014},
-  url          = {http://sites.computer.org/debull/A14sept/p6.pdf}
+  author          = {Eric Gribkoff and Dan Suciu and Guy {Van den Broeck}},
+  title           = {Lifted Probabilistic Inference: {A} Guide for the Database
+                  Researcher},
+  journal         = {{IEEE} Data Eng. Bull.},
+  volume          = {37},
+  number          = {3},
+  pages           = {6--17},
+  year            = {2014},
+  url             = {http://sites.computer.org/debull/A14sept/p6.pdf}
 }
 @inproceedings{DBLP:conf/pods/BeameBGS15,
-  author       = {Paul Beame and
-                  Guy {Van den Broeck} and
-                  Eric Gribkoff and
+  author          = {Paul Beame and Guy {Van den Broeck} and Eric Gribkoff and
                   Dan Suciu},
-  title        = {Symmetric Weighted First-Order Model Counting},
-  booktitle    = {{PODS}},
-  pages        = {313--328},
-  publisher    = {{ACM}},
-  year         = {2015},
-  doi          = {10.1145/2745754.2745760}
+  title           = {Symmetric Weighted First-Order Model Counting},
+  booktitle       = {{PODS}},
+  pages           = {313--328},
+  publisher       = {{ACM}},
+  year            = {2015},
+  doi             = {10.1145/2745754.2745760}
 }
 @inproceedings{DBLP:conf/kr/BroeckMD14,
-  author    = {Guy {Van den Broeck} and
-               Wannes Meert and
-               Adnan Darwiche},
-  title     = {Skolemization for Weighted First-Order Model Counting},
-  booktitle = {{KR}},
-  publisher = {{AAAI} Press},
-  year      = {2014},
-  url          = {http://www.aaai.org/ocs/index.php/KR/KR14/paper/view/8012}
+  author          = {Guy {Van den Broeck} and Wannes Meert and Adnan Darwiche},
+  title           = {Skolemization for Weighted First-Order Model Counting},
+  booktitle       = {{KR}},
+  publisher       = {{AAAI} Press},
+  year            = {2014},
+  url             = {http://www.aaai.org/ocs/index.php/KR/KR14/paper/view/8012}
 }
 @book{hinman2018fundamentals,
-  title={Fundamentals of mathematical logic},
-  author={Hinman, Peter G.},
-  year={2018},
-  publisher={CRC Press}
+  title           = {Fundamentals of mathematical logic},
+  author          = {Hinman, Peter G.},
+  year            = {2018},
+  publisher       = {CRC Press}
 }
 @article{darwiche2001tractable,
-  title={On the tractable counting of theory models and its application to truth maintenance and belief revision},
-  author={Darwiche, Adnan},
-  journal={Journal of Applied Non-Classical Logics},
-  volume={11},
-  number={1-2},
-  pages={11--34},
-  year={2001},
-  publisher={Taylor \& Francis},
-  doi          = {10.3166/JANCL.11.11-34}
-}
-@book{DBLP:books/daglib/0030198,
-  author       = {Wilfrid Hodges},
-  title        = {A Shorter Model Theory},
-  publisher    = {Cambridge University Press},
-  year         = {1997}
+  title           = {On the tractable counting of theory models and its
+                  application to truth maintenance and belief revision},
+  author          = {Darwiche, Adnan},
+  journal         = {Journal of Applied Non-Classical Logics},
+  volume          = {11},
+  number          = {1-2},
+  pages           = {11--34},
+  year            = {2001},
+  publisher       = {Taylor \& Francis},
+  doi             = {10.3166/JANCL.11.11-34}
 }
 @book{DBLP:books/aw/RN2020,
-  author       = {Stuart Russell and
-                  Peter Norvig},
-  title        = {Artificial Intelligence: {A} Modern Approach (4th Edition)},
-  publisher    = {Pearson},
-  year         = {2020}
+  author          = {Stuart Russell and Peter Norvig},
+  title           = {Artificial Intelligence: {A} Modern Approach (4th Edition)},
+  publisher       = {Pearson},
+  year            = {2020}
 }
 @inproceedings{DBLP:conf/aaai/SinglaD08,
-  author       = {Parag Singla and
-                  Pedro M. Domingos},
-  title        = {Lifted First-Order Belief Propagation},
-  booktitle    = {{AAAI}},
-  pages        = {1094--1099},
-  publisher    = {{AAAI} Press},
-  year         = {2008},
-  url          = {http://www.aaai.org/Library/AAAI/2008/aaai08-173.php}
+  author          = {Parag Singla and Pedro M. Domingos},
+  title           = {Lifted First-Order Belief Propagation},
+  booktitle       = {{AAAI}},
+  pages           = {1094--1099},
+  publisher       = {{AAAI} Press},
+  year            = {2008},
+  url             = {http://www.aaai.org/Library/AAAI/2008/aaai08-173.php}
 }
 @inproceedings{DBLP:conf/uai/BroeckCD12,
-  author       = {Guy {Van den Broeck} and
-                  Arthur Choi and
-                  Adnan Darwiche},
-  title        = {Lifted Relax, Compensate and then Recover: From Approximate to Exact
-                  Lifted Probabilistic Inference},
-  booktitle    = {{UAI}},
-  pages        = {131--141},
-  publisher    = {{AUAI} Press},
-  year         = {2012},
-  url          = {https://dslpitt.org/uai/displayArticleDetails.jsp?mmnu=1\&smnu=2\&article\_id=2349\&proceeding\_id=28}
+  author          = {Guy {Van den Broeck} and Arthur Choi and Adnan Darwiche},
+  title           = {Lifted Relax, Compensate and then Recover: From Approximate
+                  to Exact Lifted Probabilistic Inference},
+  booktitle       = {{UAI}},
+  pages           = {131--141},
+  publisher       = {{AUAI} Press},
+  year            = {2012},
+  url             =
+                  {https://dslpitt.org/uai/displayArticleDetails.jsp?mmnu=1&smnu=2&article_id=2349&proceeding_id=28}
 }
-@misc{tóth2024complexityweightedfirstordermodel,
-      title={Complexity of Weighted First-Order Model Counting in the Two-Variable Fragment with Counting Quantifiers: A Bound to Beat},
-      author={Jan Tóth and Ondřej Kuželka},
-      year={2024},
-      eprint={2404.12905},
-      archivePrefix={arXiv},
-      primaryClass={cs.LO},
-      url={https://arxiv.org/abs/2404.12905},
+@inproceedings{DBLP:conf/kr/TothK24,
+  author          = {Jan T{\'{o}}th and Ond\v{r}ej Ku\v{z}elka},
+  title           = {Complexity of Weighted First-Order Model Counting in the
+                  Two-Variable Fragment with Counting Quantifiers: {A} Bound to
+                  Beat},
+  booktitle       = {{KR}},
+  year            = {2024},
+  doi             = {10.24963/KR.2024/64}
 }
 @article{DBLP:journals/ai/ChaviraD08,
-  author       = {Mark Chavira and
-                  Adnan Darwiche},
-  title        = {On probabilistic inference by weighted model counting},
-  journal      = {Artif. Intell.},
-  volume       = {172},
-  number       = {6-7},
-  pages        = {772--799},
-  year         = {2008},
-  doi          = {10.1016/J.ARTINT.2007.11.002}
+  author          = {Mark Chavira and Adnan Darwiche},
+  title           = {On probabilistic inference by weighted model counting},
+  journal         = {Artif. Intell.},
+  volume          = {172},
+  number          = {6-7},
+  pages           = {772--799},
+  year            = {2008},
+  doi             = {10.1016/J.ARTINT.2007.11.002}
 }
 @article{DBLP:journals/ai/Nilsson86,
-  author       = {Nils J. Nilsson},
-  title        = {Probabilistic Logic},
-  journal      = {Artif. Intell.},
-  volume       = {28},
-  number       = {1},
-  pages        = {71--87},
-  year         = {1986},
-  doi          = {10.1016/0004-3702(86)90031-7}
+  author          = {Nils J. Nilsson},
+  title           = {Probabilistic Logic},
+  journal         = {Artif. Intell.},
+  volume          = {28},
+  number          = {1},
+  pages           = {71--87},
+  year            = {1986},
+  doi             = {10.1016/0004-3702(86)90031-7}
 }
 @article{vsaletic2024graded,
-  title={Graded Logics},
-  author={{\v{S}}aleti{\'c}, Dragan Z.},
-  journal={Interdisciplinary Description of Complex Systems: INDECS},
-  volume={22},
-  number={3},
-  pages={276--295},
-  year={2024},
-  publisher={Hrvatsko interdisciplinarno dru{\v{s}}tvo}
+  title           = {Graded Logics},
+  author          = {{\v{S}}aleti{\'c}, Dragan Z.},
+  journal         = {Interdisciplinary Description of Complex Systems: INDECS},
+  volume          = {22},
+  number          = {3},
+  pages           = {276--295},
+  year            = {2024},
+  publisher       = {Hrvatsko interdisciplinarno dru{\v{s}}tvo}
 }
 @book{novak2012mathematical,
-  title={Mathematical principles of fuzzy logic},
-  author={Nov{\'a}k, Vil{\'e}m and Perfilieva, Irina and Mockor, Jiri},
-  volume={517},
-  year={2012},
-  publisher={Springer Science \& Business Media}
+  title           = {Mathematical principles of fuzzy logic},
+  author          = {Nov{\'a}k, Vil{\'e}m and Perfilieva, Irina and Mockor,
+                  Jiri},
+  volume          = {517},
+  year            = {2012},
+  publisher       = {Springer Science \& Business Media}
 }
 @article{DBLP:journals/ai/WangPWK24,
-  author       = {Yuanhong Wang and
-                  Juhua Pu and
-                  Yuyi Wang and
-                  Ondrej Ku\v{z}elka},
-  title        = {Lifted algorithms for symmetric weighted first-order model sampling},
-  journal      = {Artif. Intell.},
-  volume       = {331},
-  pages        = {104114},
-  year         = {2024},
-  doi          = {10.1016/J.ARTINT.2024.104114}
+  author          = {Yuanhong Wang and Juhua Pu and Yuyi Wang and Ond\v{r}ej
+                  Ku\v{z}elka},
+  title           = {Lifted algorithms for symmetric weighted first-order model
+                  sampling},
+  journal         = {Artif. Intell.},
+  volume          = {331},
+  pages           = {104114},
+  year            = {2024},
+  doi             = {10.1016/J.ARTINT.2024.104114}
 }
 @article{DBLP:journals/ijar/AzzoliniR23,
-  author       = {Damiano Azzolini and
-                  Fabrizio Riguzzi},
-  title        = {Lifted inference for statistical statements in probabilistic answer
-                  set programming},
-  journal      = {Int. J. Approx. Reason.},
-  volume       = {163},
-  pages        = {109040},
-  year         = {2023},
-  doi          = {10.1016/J.IJAR.2023.109040}
+  author          = {Damiano Azzolini and Fabrizio Riguzzi},
+  title           = {Lifted inference for statistical statements in
+                  probabilistic answer set programming},
+  journal         = {Int. J. Approx. Reason.},
+  volume          = {163},
+  pages           = {109040},
+  year            = {2023},
+  doi             = {10.1016/J.IJAR.2023.109040}
 }
 @article{DBLP:journals/ijar/RiguzziBZCL17,
-  author       = {Fabrizio Riguzzi and
-                  Elena Bellodi and
-                  Riccardo Zese and
-                  Giuseppe Cota and
-                  Evelina Lamma},
-  title        = {A survey of lifted inference approaches for probabilistic logic programming
-                  under the distribution semantics},
-  journal      = {Int. J. Approx. Reason.},
-  volume       = {80},
-  pages        = {313--333},
-  year         = {2017},
-  doi          = {10.1016/J.IJAR.2016.10.002}
+  author          = {Fabrizio Riguzzi and Elena Bellodi and Riccardo Zese and
+                  Giuseppe Cota and Evelina Lamma},
+  title           = {A survey of lifted inference approaches for probabilistic
+                  logic programming under the distribution semantics},
+  journal         = {Int. J. Approx. Reason.},
+  volume          = {80},
+  pages           = {313--333},
+  year            = {2017},
+  doi             = {10.1016/J.IJAR.2016.10.002}
 }
 @inproceedings{DBLP:conf/ilp/BarvinekB0ZK21,
-  author       = {J{\'{a}}chym Barv{\'{\i}}nek and
-                  Timothy {van Bremen} and
-                  Yuyi Wang and
-                  Filip Zelezn{\'{y}} and
-                  Ondrej Ku\v{z}elka},
-  title        = {Automatic Conjecturing of P-Recursions Using Lifted Inference},
-  booktitle    = {{ILP}},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {13191},
-  pages        = {17--25},
-  publisher    = {Springer},
-  year         = {2021},
-  doi          = {10.1007/978-3-030-97454-1\_2}
+  author          = {J{\'{a}}chym Barv{\'{\i}}nek and Timothy {van Bremen} and
+                  Yuyi Wang and Filip Zelezn{\'{y}} and Ond\v{r}ej Ku\v{z}elka},
+  title           = {Automatic Conjecturing of {P}-Recursions Using Lifted
+                  Inference},
+  booktitle       = {{ILP}},
+  series          = {Lecture Notes in Computer Science},
+  volume          = {13191},
+  pages           = {17--25},
+  publisher       = {Springer},
+  year            = {2021},
+  doi             = {10.1007/978-3-030-97454-1_2}
 }
