--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -20,10 +20,10 @@
 
 \title{Towards Practical First-Order Model Counting}
 
-\author{Ananth K. Kidambi}{Indian Institute of Technology Bombay, Mumbai, India}{210051002@iitb.ac.in}{}{TODO: funding}
-\author{Guramrit Singh}{Indian Institute of Technology Bombay, Mumbai, India}{guramrit@iitb.ac.in}{}{TODO: funding}
-\author{Paulius Dilkas}{University of Toronto, Toronto, Canada \and Vector Institute, Toronto, Canada \and \url{https://dilkas.github.io/}}{paulius.dilkas@utoronto.ca}{https://orcid.org/0000-0001-9185-7840}{TODO: funding}
-\author{Kuldeep S. Meel}{University of Toronto, Toronto, Canada \and \url{https://www.cs.toronto.edu/~meel/}}{meel@cs.toronto.edu}{https://orcid.org/0000-0001-9423-5270}{TODO: funding}
+\author{Ananth K. Kidambi}{Indian Institute of Technology Bombay, Mumbai, India}{210051002@iitb.ac.in}{}{}
+\author{Guramrit Singh}{Indian Institute of Technology Bombay, Mumbai, India}{guramrit@iitb.ac.in}{}{}
+\author{Paulius Dilkas}{University of Toronto, Toronto, Canada \and Vector Institute, Toronto, Canada \and \url{https://dilkas.github.io/}}{paulius.dilkas@utoronto.ca}{https://orcid.org/0000-0001-9185-7840}{}
+\author{Kuldeep S. Meel}{University of Toronto, Toronto, Canada \and \url{https://www.cs.toronto.edu/~meel/}}{meel@cs.toronto.edu}{https://orcid.org/0000-0001-9423-5270}{}
 
 \authorrunning{A.\,K. Kidambi, G. Singh, P. Dilkas, and K.\,S. Meel}
 \Copyright{Ananth K. Kidambi, Guramrit Singh, Paulius Dilkas, and Kuldeep S. Meel}
@@ -39,9 +39,14 @@
 %\supplement{}%optional, e.g. related research data, source code, ... hosted on a repository like zenodo, figshare, GitHub, ...
 %\supplementdetails[linktext={opt. text shown instead of the URL}, cite=DBLP:books/mk/GrayR93, subcategory={Description, Subcategory}, swhid={Software Heritage Identifier}]{General Classification (e.g. Software, Dataset, Model, ...)}{URL to related version} %linktext, cite, and subcategory are optional
 
-%\funding{(Optional) general funding statement \dots}%optional, to capture a funding statement, which applies to all authors. Please enter author specific funding statements as fifth argument of the \author macro.
+\funding{This research was funded in part by the Natural Sciences and
+  Engineering Research Council of Canada (NSERC), funding reference number
+  RGPIN-2024-05956, and the Digital Research Alliance of Canada
+  (\texttt{\href{https://alliancecan.ca/}{alliancecan.ca}}).}
 
-\acknowledgements{Part of the research was conducted while all authors were at the National University of Singapore.}
+\acknowledgements{The first two authors contributed equally. Part of the
+  research was conducted while all authors were at the National University of
+  Singapore.}
 
 %\nolinenumbers %uncomment to disable line numbering
 
@@ -139,14 +144,13 @@
 \todo[inline,caption={}]{
   For the entire paper:
   \begin{itemize}
-    \item Perhaps I can list the `authors contributed equally' statement as part
-          of Funding. Check K's recent papers.
     \item Sentence vs formula: be consistent and not confusing
     \item 15 pages excluding references
-    \item Go through the rest of formatting instructions (in GTD)
     \item Make sure all the internal references (e.g., to examples) are still
           valid
     \item Maybe add extra references to subsections
+    \item When submitting: go through the rest of formatting instructions (in
+          GTD)
   \end{itemize}
 }
 \section{Introduction}
